Second commit (im not sure why it doesn't push everything)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=final_exam_software
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.docker.compose.enabled=false
+
+
+sonar.projectKey=final_exam_software
+sonar.projectName=Final Exam Software
+sonar.host.url=http://localhost:9000
+sonar.login=sqp_a392a98a8bd860ad8723888354da47bfc6742e97
+
+sonar.java.binaries=target/classes
